<resources>
    <string name="appName">GMA</string>
    <string name="qrCodeCameraButton">Open camera view for QR Code scanning</string>
    <string name="seeCommentHistoryButton">Open Comment History view</string>
    <string name="comment">Comment</string>
    <string name="date">Date</string>
    <string name="event">Event</string>
    <string name="progressText">Loading…</string>
    <string name="mainInstructionsString">Type in the machine code or scan its QR Code with the button below</string>
    <string name="searchButtonString">Search</string>
    <string name="editTextMachineCodeHint">Type in the machine code</string>
    <string name="machineInfoTextViewPlaceholder">Informações da Máquina</string>
    <string name="machineCode">Machine code</string>
    <string name="machineName">Name</string>
    <string name="machineType">Type</string>
    <string name="machinePower">Power</string>
    <string name="machineBrand">Brand</string>
    <string name="machineModel">Product model</string>
    <string name="machineStatus">Current status</string>
    <string name="machineMaintenanceNeeded">Maintenance needed</string>
    <string name="machineActive">Active</string>
    <string name="machineComment">Last comment</string>
    <string name="commentHistoryDialogTitle">Comment History</string>
    <string name="registerEventDialogTitle">Register event</string>
    <string name="registerEventDialogSave">Save</string>
    <string name="registerEventDialogRadioText">Select the event to be registered</string>
    <string name="eventInventory">Going to inventory</string>
    <string name="eventCustomer">Going to customer</string>
    <string name="eventMaintenance">Going to maintenance</string>
    <string name="eventReadyToRent">Set to ready to rent</string>
    <string name="eventFlagNeedsMaintenance">Mark as needing maintenance</string>
    <string name="eventComment">Add a comment to this event entry (optional)</string>
    <string name="machinePressure">Pressure</string>
    <string name="machineThroughput">Throughput</string>
    <string name="machineVoltage">Voltage</string>
    <string name="machineYear">Year</string>
    <string name="machineSerialNumber">Serial Number</string>
    <string name="machineStatusInventory">On inventory</string>
    <string name="machineStatusReserved">Reserved</string>
    <string name="machineStatusMaintenance">In maintenance</string>
    <string name="machineStatusReadyForRental">Ready for rental</string>
    <string name="machineStatusRented">Rented</string>
    <string name="machineStatusCustomer">With a customer</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="stockItemFallbackString">Unavailable data</string>
    <string name="operationResultImageDescription">Image indicating success or failure on the operation</string>
    <string name="operationResultTextSuccess">Operation executed successfully</string>
    <string name="operationResultTextFailure">Operation failed</string>
    <string name="operationResultAcknowledgeButtonText">OK</string>
    <string name="errorMessageGettingInfo">Error getting info for machine of code %1$s: %2$s</string>
    <string name="errorMessageUpdatingInfo">Error updating info of machine of code %1$s: %2$s</string>
    <string name="successMessageUpdatingInfo">Successfully updated info of machine of code %1$s</string>
    <string name="machineEventErrorNoEventSelected">No event selected for update of machine with code %1$s</string>
    <string name="cameraErrorNoPermission">Permission denied, QR code reader can\'t be opened</string>
    <string name="machineCodeTextEditInvalidFormat">Machine code must be non null and alphanumeric</string>
</resources>