<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingEnd="16dp"
                android:paddingStart="6dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_baseline_close_24" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/radioGroupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="70dp"
                android:text="@string/registerEventDialogRadioText"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroupEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupText" >

                <RadioButton
                    android:id="@+id/radioEventInventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventInventory"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioEventCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventCustomer"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioEventMaintenance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventMaintenance"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioEventReadyToRent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventReadyToRent"
                    android:textSize="16sp" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBoxEventFlagNeedsMaintenance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/eventFlagNeedsMaintenance"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupEvents" />

            <TextView
                android:id="@+id/commentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/eventComment"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBoxEventFlagNeedsMaintenance" />

            <EditText
                android:id="@+id/editTextEventComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:autofillHints="@string/eventComment"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/commentText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
